test/visibility/import/rename/renameChain.good
renameChain.chpl:4: In module 'User':
renameChain.chpl:5: error: cannot rename symbol 'bar' as it is not defined in 'M'
renameChain.chpl:5: warning: 'bar' is repeated
renameChain.chpl:5: note: did you mean to rename 'foo' to 'baz'?
